# oblix-sgx

./: .gitignore
hello-rust/app/: Cargo.toml
hello-rust/app/src/: main.rs  microbenchmarks.rs
hello-rust/enclave/: Cargo.toml  Enclave.edl
hello-rust/enclave/src/: lib.rs
osm-microbenchmarks/: Cargo.toml  Makefile
osm-microbenchmarks/app/: Cargo.toml
osm-microbenchmarks/app/src/: main.rs  microbenchmarks.rs
osm-microbenchmarks/enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile
osm-microbenchmarks/enclave/src/: lib.rs
