[package]
name = "app"
version = "0.9.8"
authors = ["duanran01 <duanran01@baidu.com>"]
build = "build.rs"

[dependencies]
sgx_types = { version = "1.0.1" }
sgx_urts = { version = "1.0.1" }

path-oram = { git = "https://github.com/pratyush/oblix", version = "0.1", default-features = false, features = [ "std", "standard_setup" ] }
ods = { git = "https://github.com/pratyush/oblix", version = "0.1", default-features = false, features = ["std"] }
osm = { git = "https://github.com/pratyush/oblix", version = "0.1", default-features = false, features = ["std"] }

time = "*"
generic-array = { version = "0.8" }
flat_map = { version = "0.0.6", default-features = false }
rand = { version = "0.4" }
structopt = { version = "0.2" }

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1
debug-assertions = false
