[package]
name = "osm-microbenchmarks"
version = "0.1.0"
authors = ["Pratyush Mishra, Rishabh Poddar"]

[lib]
name = "osm_microbenchmarks"
crate-type = ["staticlib"]

[dependencies]
path-oram = { git = "https://github.com/pratyush/oblix", version = "0.1", default-features = false, features = [ "doubly_oblivious" ] }
ods = { git = "https://github.com/pratyush/oblix", version = "0.1", default-features = false, features = [ "doubly_oblivious" ] }
osm = { git = "https://github.com/pratyush/oblix", version = "0.1", default-features = false, features = [ "doubly_oblivious" ] }
serde = { version = "=1.0.27", default-features = false, features = [ "alloc" ] }
generic-array = { version = "0.8", default-features = false, features = ["serde"] }

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { version = "0.9.8" }
sgx_tstd = {  version = "0.9.8" }
