[package]
name = "osm-microbenchmarks"
version = "0.1.0"
authors = ["Pratyush Mishra, Rishabh Poddar"]

[lib]
name = "osm_microbenchmarks"
crate-type = ["staticlib"]

[dependencies]
path-oram = { path = "/root/oblix-system/path-oram", version = "0.1", default-features = false }
ods = { path = "/root/oblix-system/ods", version = "0.1", default-features = false }
osm = { path = "/root/oblix-system/osm", version = "0.1", default-features = false }
generic-array = { version = "0.8", default-features = false}

[features]
default = []

[profile.release]
lto = true
opt-level = 3
debug = false
rpath = false
codegen-units = 1
debug-assertions = false
panic = 'abort'


[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { version = "1.0.1" }
sgx_tstd = {  version = "1.0.1" }
